--- a/inft1207w25sec11/week 1/ASS-1_Part-1.html
+++ b/inft1207w25sec11/week 1/ASS-1_Part-1.html
@@ -10,6 +10,16 @@
     Description: This HTML document is designed to present a formal letter hosted on a university intranet
     -->
     <title>Marking_up_a_letter</title>
+    <style>
+        /* provided CSS*/
+        .sender-column{
+            text-align: right;
+        }
+        address{
+            font-style: normal;
+            line-height: 1.5;
+        }
+    </style>
 </head>
 <body>
     
