--- a/inft1207w25sec11/week 1/ASS-1_Part-1.html
+++ b/inft1207w25sec11/week 1/ASS-1_Part-1.html
@@ -46,5 +46,12 @@
     UK <br>
 </i>
     </address>
+    <h1>Re: Eileen Dover university application</h1>
+    <p>Dear Eileen,</p>
+
+    <p>Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your <strong>PhD</strong> next year. I will answer your questions one by one, in the following sections.</p>
+
+    <h2>Starting dates</h2>
+    <p>We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:</p>
 </body>
 </html>
