--- a/inft1207w25sec11/week 1/ASS-1_Part-1.html
+++ b/inft1207w25sec11/week 1/ASS-1_Part-1.html
@@ -53,5 +53,12 @@
 
     <h2>Starting dates</h2>
     <p>We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:</p>
+
+    <ul>
+        <li>First semester: 9 September 2016</li>
+        <li>Second semester: 15 January 2017</li>
+        <li>Third semester: 2 May 2017</li>
+    </ul>
+    
 </body>
 </html>
