--- a/inft1207w25sec11/week 1/ASS-1_Part-1.html
+++ b/inft1207w25sec11/week 1/ASS-1_Part-1.html
@@ -59,6 +59,9 @@
         <li>Second semester: 15 January 2017</li>
         <li>Third semester: 2 May 2017</li>
     </ul>
-    
+
+    <p>Please let me know if this is ok, and if so which start date you would prefer.</p>
+    <p>You can find more information about <a href="http://example.com">important university dates</a> on our website.</p>
+
 </body>
 </html>
