--- a/inft1207w25sec11/week 1/ASS-1_Part-1.html
+++ b/inft1207w25sec11/week 1/ASS-1_Part-1.html
@@ -64,5 +64,10 @@
     <p>Please let me know if this is ok, and if so which start date you would prefer.</p>
     <p>You can find more information about <a href="http://example.com">important university dates</a> on our website.</p>
 
+    <ol>
+        <li>Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>).</li>
+        <li>Measuring the effect on performance of bass players at temperatures exceeding 30°C (86°F), when the audience size exponentitially increases (effect of 3 x 10<sup>3</sup> increasing to 3 x 10<sup>4</sup>.)</li>
+        <li><strong>HTML</strong> and <Strong>CSS</Strong> constructs for repersenting musical scores.</li>
+    </ol>
 </body>
 </html>
