--- a/inft1207w25sec11/week 1/ASS-1_Part-1.html
+++ b/inft1207w25sec11/week 1/ASS-1_Part-1.html
@@ -60,7 +60,6 @@
         <li>Third semester: 2 May 2017</li>
     </ul>
 
-    
     <p>Please let me know if this is ok, and if so which start date you would prefer.</p>
     <p>You can find more information about <a href="http://example.com">important university dates</a> on our website.</p>
 
@@ -90,6 +89,6 @@
 
     <p>Dr Eleanor Gaye</p>
 
-    <p><strong>University of Awesome motto:</strong> "Be awesome to each other." – <em>The memoirs of Bill S Preston, Esq</em></p>
+    <p><strong>University of Awesome motto:</strong> "Be awesome to each other."  <em>The memoirs of Bill S Preston, Esq</em></p>
 </body>
 </html>
