--- a/inft1207w25sec11/week 1/ASS-1_Part-1.html
+++ b/inft1207w25sec11/week 1/ASS-1_Part-1.html
@@ -79,6 +79,7 @@
         
     <p>Icelandic brownian shuffle</p>
     <blockquote><p></p>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</p></blockquote>
+    <blockquote><p>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</p></blockquote>
     
     <p>Arctic robot dance</p>
     <blockquote><p>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterised by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</p></blockquote>
