--- a/assets/ASS-1_part-2.html
+++ b/assets/ASS-1_part-2.html
@@ -13,6 +13,11 @@
     <title>Birdwatching</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700" rel="stylesheet">
 
+    <!--
+    provide a link for the make the webiste green color from style.css code 
+    -->
+    <link rel="stylesheet" href="/assets/style.css">
+
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
