--- a/assets/ASS-1_part-2.html
+++ b/assets/ASS-1_part-2.html
@@ -16,6 +16,7 @@
     <!--
     provide a link for the make the webiste green color from style.css code 
     -->
+
     <link rel="stylesheet" href="/assets/style.css">
 
     <!--[if lt IE 9]>
@@ -26,8 +27,13 @@
   <body>
 
       <h1>Birdwatching</h1>
+  
+    <h1>Birdwatching</h1>
       <img src="dove.png" alt="a simple dove logo">
-
+    <!--
+      order the list in horizontal way by using <nav>
+    -->
+    <nav>
 
       <ul>
         <li><span>Home</span></li>
@@ -37,6 +43,7 @@
         <li><a href="#">Forum</a></li>
       </ul>
 
+    </nav>
 
       <h2>Welcome</h2>
 
