--- a/assets/ASS-1_part-2.html
+++ b/assets/ASS-1_part-2.html
@@ -24,10 +24,12 @@
     <![endif]-->
   </head>
 
-  <body>
-
-      <h1>Birdwatching</h1>
-  
+  <body> 
+    
+    <!--
+    Add <header> so the bird logo will display on the headline 
+    -->
+  <header>
     <h1>Birdwatching</h1>
       <img src="dove.png" alt="a simple dove logo">
     <!--
@@ -42,9 +44,8 @@
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
-
     </nav>
-
+  </header>
       <h2>Welcome</h2>
 
       <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
