--- a/assets/ASS-1_part-2.html
+++ b/assets/ASS-1_part-2.html
@@ -11,13 +11,11 @@
     -->
 
     <title>Birdwatching</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700" rel="stylesheet">
-
     <!--
     provide a link for the make the webiste green color from style.css code 
     -->
 
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -55,11 +53,13 @@
 
       <div>
         <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
-      
-        <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
+        <p class="mainparadiv">
+          So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!
+        </p>
       </div>
     </section>
 
+    <!--MAin boby content for photos-->
     <section class="Paraimage">
       <h2>Favourite photos</h2>
 
