--- a/inft1207w25sec11/week 4/ASS-2_part-2.html
+++ b/inft1207w25sec11/week 4/ASS-2_part-2.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./minimal-table.css">
 </head>
 <body>
+    <h1>Planets Data</h1>
+    <table>
+        <caption>Data about the planets of our solar system (Planetary facts taken from <a href="https://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>)</caption>
+    </table>
     
 </body>
 </html>
