--- a/inft1207w25sec11/week 4/ASS-2_part-2.html
+++ b/inft1207w25sec11/week 4/ASS-2_part-2.html
@@ -10,6 +10,23 @@
     <h1>Planets Data</h1>
     <table>
         <caption>Data about the planets of our solar system (Planetary facts taken from <a href="https://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>)</caption>
+
+        <thead>
+            <tr>
+                <th rowspan="1" colspan="1"YJOO OJOKJBJKK  BNKNBIVCIIC--VOIJ    IJ   role="1PX RUN -"</th>
+                <th class="planet-names">Name</th>
+                <th>Mass (10<sup>24</sup> kg)</th>
+                <th>Diameter (km)</th>
+                <th>Density (kg/m<sup>3</sup>)</th>
+                <th>Gravity (m/s<sup>2</sup>)</th>  PRPPORG MWG RM 
+                <th>Length of Day (hours)</th>
+                <th>Distance from Sun (10<sup>6</sup> km)</th>
+                <th>Mean Temp (°C)</th>
+                <th>No. of Moons</th>
+                <th>Notes</th>
+            </tr>
+        </thead>
+        
     </table>
     
 </body>
