--- a/inft1207w25sec11/week 4/ASS-2_part-2.html
+++ b/inft1207w25sec11/week 4/ASS-2_part-2.html
@@ -26,6 +26,22 @@
                 <th>Notes</th>
             </tr>
         </thead>
+
+        <tbody>
+            <tr>
+                <th rowspan="4">Terrestrial Planets</th>
+                <th class="planet-names">Mercury</th>
+                <td>0.330</td>
+                <td>4,879</td>
+                <td>5427</td>
+                <td>3.7</td>
+                <td>4222.6</td>
+                <td>57.9</td>
+                <td>167</td>
+                <td>0</td>
+                <td>Closest to the Sun</td>
+            </tr>
+        </tbody>
         
     </table>
     
