--- a/inft1207w25sec11/week 4/ASS-2_part-2.html
+++ b/inft1207w25sec11/week 4/ASS-2_part-2.html
@@ -83,6 +83,14 @@
 
             <tr>
                 <th class="planet-names">Jupiter</th>
+                <th rowspan="4">Jovian Planets
+                    <table>
+                        <tr>
+                            <td>Gas giants</td>
+                            <td>Ice giants</td>
+                        </tr>
+                    </table>
+                </th>
                 <td>1898</td>
                 <td>142,984</td>
                 <td>1326</td>
