--- a/inft1207w25sec11/week 4/ASS-2_part-2.html
+++ b/inft1207w25sec11/week 4/ASS-2_part-2.html
@@ -140,6 +140,10 @@
                 <td>14</td>
                 <td></td>
             </tr>
+
+            <tr>
+                <th rowspan="1">Dwarf Planets</th>
+            </tr>
         </tbody>
     </table>
     
