--- a/inft1207w25sec11/week 4/ASS-2_part-2.html
+++ b/inft1207w25sec11/week 4/ASS-2_part-2.html
@@ -13,12 +13,12 @@
 
         <thead>
             <tr>
-                <th rowspan="1" colspan="1"YJOO OJOKJBJKK  BNKNBIVCIIC--VOIJ    IJ   role="1PX RUN -"</th>
+                <th rowspan="1" colspan="1"></th>
                 <th class="planet-names">Name</th>
                 <th>Mass (10<sup>24</sup> kg)</th>
                 <th>Diameter (km)</th>
                 <th>Density (kg/m<sup>3</sup>)</th>
-                <th>Gravity (m/s<sup>2</sup>)</th>  PRPPORG MWG RM 
+                <th>Gravity (m/s<sup>2</sup>)</th>
                 <th>Length of Day (hours)</th>
                 <th>Distance from Sun (10<sup>6</sup> km)</th>
                 <th>Mean Temp (°C)</th>
