--- a/inft1207w25sec11/week 4/ASS-2_Part-1.html
+++ b/inft1207w25sec11/week 4/ASS-2_Part-1.html
@@ -98,7 +98,7 @@
   </head>
   <body>
     <header>
-      <h1>Mozilla 
+      <h1>Mozilla
         <img src="firefox_logo-only_RGB.png" alt="fire fox logo with blue eart witha fox on it,links to larger version of the image">
       </h1>
       <!-- insert <img> element, link to the small
@@ -109,7 +109,7 @@
     <main>
       <article>
         <!-- insert iframe from youtube -->
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ojcNcvb1olg" allowfullscreen></iframe>
+
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
@@ -120,25 +120,22 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img src="firefox_logo-only_RGB.png"  alt="fire fox logo with blue eart witha fox on it,links to larger version of the image">
+          <img>
         </a>
         <a href="https://www.mozilla.org/">
-          <img src="mozilla-dinosaur-head.png" alt="red dragon picture ,inks to larger version of the image">
+          <img>
         </a>
         <a href="https://addons.mozilla.org/">
-          <img src="firefox-addons.jpg" alt="A small puzzuled fire fox logo with is carshed,links to larger version of the image">
+          <img>
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="mdn.svg" alt="the code for a dragon in white and blue fond, links to larger version of the image">
+          <img>
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
         <!-- insert picture element -->
-         <a href="#">
-          <img src="red-panda.jpg" alt="A small red panda on a tree, links to larger version of the image" >
-         </a>
       </div>
 
     </main>
