--- a/inft1207w25sec11/week 4/ASS-2_Part-1.html
+++ b/inft1207w25sec11/week 4/ASS-2_Part-1.html
@@ -121,7 +121,7 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img src="firefox_logo-only_RGB.png"  alt="fire fox logo with blue eart witha fox on it,links to larger version of the image">
         </a>
         <a href="https://www.mozilla.org/">
           <img>
