--- a/inft1207w25sec11/week 4/ASS-2_Part-1.html
+++ b/inft1207w25sec11/week 4/ASS-2_Part-1.html
@@ -124,7 +124,7 @@
           <img src="firefox_logo-only_RGB.png"  alt="fire fox logo with blue eart witha fox on it,links to larger version of the image">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img src="mozilla-dinosaur-head.png" alt="red dragon picture ,inks to larger version of the image">
         </a>
         <a href="https://addons.mozilla.org/">
           <img>
