--- a/inft1207w25sec11/week 4/ASS-2_Part-1.html
+++ b/inft1207w25sec11/week 4/ASS-2_Part-1.html
@@ -127,7 +127,7 @@
           <img src="mozilla-dinosaur-head.png" alt="red dragon picture ,inks to larger version of the image">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="firefox-addons.jpg" alt="A small puzzuled fire fox logo with is carshed,links to larger version of the image">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
           <img>
