--- a/inft1207w25sec11/week 4/ASS-2_Part-1.html
+++ b/inft1207w25sec11/week 4/ASS-2_Part-1.html
@@ -130,7 +130,7 @@
           <img src="firefox-addons.jpg" alt="A small puzzuled fire fox logo with is carshed,links to larger version of the image">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="mdn.svg" alt="the code for a dragon in white and blue fond, links to larger version of the image">
         </a>
         <div class="clearfix"></div>
       </div>
