--- a/inft1207w25sec11/week 4/ASS-2_Part-1.html
+++ b/inft1207w25sec11/week 4/ASS-2_Part-1.html
@@ -98,7 +98,7 @@
   </head>
   <body>
     <header>
-      <h1>Mozilla
+      <h1>Mozilla 
         <img src="firefox_logo-only_RGB.png" alt="fire fox logo with blue eart witha fox on it,links to larger version of the image">
       </h1>
       <!-- insert <img> element, link to the small
@@ -110,7 +110,6 @@
       <article>
         <!-- insert iframe from youtube -->
         <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ojcNcvb1olg" allowfullscreen></iframe>
-
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
@@ -137,6 +136,9 @@
 
       <div class="red-panda">
         <!-- insert picture element -->
+         <a href="#">
+          <img src="red-panda.jpg" alt="A small red panda on a tree, links to larger version of the image" >
+         </a>
       </div>
 
     </main>
