--- a/inft1207w25sec11/week 4/ASS-2_Part-1.html
+++ b/inft1207w25sec11/week 4/ASS-2_Part-1.html
@@ -109,7 +109,7 @@
     <main>
       <article>
         <!-- insert iframe from youtube -->
-        <iframe width="560" height="315" src="https://https://www.youtube.com/embed/ojcNcvb1olg?si=R6wOhBuKGPZ-8Y_W" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ojcNcvb1olg" allowfullscreen></iframe>
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
