--- a/inft1207w25sec11/week 4/ASS-2_Part-1.html
+++ b/inft1207w25sec11/week 4/ASS-2_Part-1.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <!-- 
+    Name: joe jacob
+    Student Number: 100977645
+    Date: Feb- 07- 2025
+    Description:The website for fire fox  and red panda  
+    -->
     <title>Mozilla splash page</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <style>
