--- a/inft1207w25sec11/week 6/ASS-3_part-1.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-1.html
@@ -1,4 +1,13 @@
-<h1>Jane Doe</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+  <h1>Jane Doe</h1>
 <div class="job-title">Web Developer</div>
 <p>
   Far far away, behind the word mountains, far from the countries Vokalia and
@@ -18,3 +27,6 @@
   <li>Web: <a href="http://example.com">http://example.com</a></li>
   <li>Tel: 123 45678</li>
 </ul>
+
+</body>
+</html>
