--- a/inft1207w25sec11/week 6/ASS-3_part-1.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-1.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="ASS-3_part-1.css">
   <title>Biography Page</title>
 </head>
-<body>
+<body> 
   
   <h1>Jane Doe</h1>
 <div class="job-title">Web Developer</div>
