--- a/inft1207w25sec11/week 6/ASS-3_part-1.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-1.html
@@ -23,11 +23,13 @@
 </p>
 
 <h2>Contact information</h2>
+<div class="border">
 <ul>
   <li>Email: <a href="mailto:jane@example.com">jane@example.com</a></li>
   <li>Web: <a href="http://example.com">http://example.com</a></li>
   <li>Tel: 123 45678</li>
 </ul>
+</div>
 
 </body>
 </html>
