--- a/inft1207w25sec11/week 6/ASS-3_part-1.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-1.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
   
-  <h1>Jane Doe</h1>
+  <h1> Joe Mathews Jacob </h1>
 <div class="job-title">Web Developer</div>
 <p>
   Far far away, behind the word mountains, far from the countries Vokalia and
