--- a/inft1207w25sec11/week 6/ASS-3_part-1.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-1.html
@@ -1,35 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+   <!-- 
+    Name: joe jacob
+    Student Number: 100977645
+    File Name:ASS-3_part-1
+    Date: Feb- 17- 2025
+    Description: Make website for a Styling a biography page
+    -->
+   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Link to an external CSS file for styling the table -->
   <link rel="stylesheet" href="ASS-3_part-1.css">
+  <!-- Title of the webpage -->
   <title>Biography Page</title>
 </head>
-<body> 
+
+<body>
   
-  <h1> Joe Mathews Jacob </h1>
-<div class="job-title">Web Developer</div>
-<p>
-  Far far away, behind the word mountains, far from the countries Vokalia and
-  Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-  right at the coast of the Semantics, a large language ocean.
-</p>
+  <h1>Joe Mathews Jacob</h1>
+  <!-- Main heading of the page, typically the largest and most important heading -->
 
-<p>
-  A small river named Duden flows by their place and supplies it with the
-  necessary regelialia. It is a paradisematic country, in which roasted parts of
-  sentences fly into your mouth.
-</p>
+  <div class="job-title">Web Developer</div>
+  <!-- A div with a class "job-title" to style or target this element specifically in CSS -->
 
-<h2>Contact information</h2>
-<div class="border">
-<ul>
-  <li>Email: <a href="mailto:jane@example.com">jane@example.com</a></li>
-  <li>Web: <a href="http://example.com">http://example.com</a></li>
-  <li>Tel: 123 45678</li>
-</ul>
-</div>
+  <p>
+    <!-- Paragraph element for text content -->
+    Far far away, behind the word mountains, far from the countries Vokalia and
+    Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+    right at the coast of the Semantics, a large language ocean.
+  </p>
+
+  <p>
+    <!-- Another paragraph element -->
+    A small river named Duden flows by their place and supplies it with the
+    necessary regelialia. It is a paradisematic country, in which roasted parts of
+    sentences fly into your mouth.
+  </p>
+
+  <h2>Contact information</h2>
+  <!-- Subheading for the contact information section -->
+
+  <div class="border">
+    <!-- A div with a class "border" to style or target this element specifically in CSS -->
+    <ul>
+      <!-- Unordered list element for listing items -->
+      <li>Email: <a href="mailto:jane@example.com">jane@example.com</a></li>
+      <!-- List item with an email link -->
+      <li>Web: <a href="http://example.com">http://example.com</a></li>
+      <!-- List item with a website link -->
+      <li>Tel: 123 45678</li>
+      <!-- List item with a telephone number -->
+    </ul>
+  </div>
 
 </body>
+<!-- End of the body section -->
+
 </html>
+<!-- End of the HTML document -->
