--- a/inft1207w25sec11/week 6/ASS-3_part-2.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-2.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Cool box</title>
-    <!-- your css link goes here -->
+   <link rel="stylesheet" href="ASS-3_part-2.css">
   </head>
+
   <body>
     <div>This is a cool box</div>
   </body>
+  
 </html>
