--- a/inft1207w25sec11/week 6/ASS-3_part-2.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-2.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <!-- 
+    Name: joe jacob
+    Student Number: 100977645
+    File Name:ASS-3_part-2
+    Date: Feb- 17- 2025
+    Description: Make website for a Styling a cool-looking box
+    -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Cool box</title>
