--- a/inft1207w25sec11/week 6/ASS-3_part-2.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+
     <!-- 
     Name: joe jacob
     Student Number: 100977645
@@ -10,11 +11,15 @@
     -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <!-- Title of the webpage -->
     <title>Cool box</title>
+    <!-- Link to an external CSS file for styling the table -->
    <link rel="stylesheet" href="ASS-3_part-2.css">
   </head>
 
+  <!--Add a boby for the coll box-->
   <body>
+    <!-- Add a class for the <div> called style -->
     <div class="style">This is a cool box</div>
   </body>
 
