--- a/inft1207w25sec11/week 6/ASS-3_part-2.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-2.html
@@ -9,8 +9,8 @@
     Date: Feb- 17- 2025
     Description: Make website for a Styling a cool-looking box
     -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <!-- Title of the webpage -->
     <title>Cool box</title>
     <!-- Link to an external CSS file for styling the table -->
