--- a/inft1207w25sec11/week 6/ASS-3_part-3.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>St Huxley's Community College</title>
     <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="ASS-3_part-3.css">
   </head>
   <body>
 
