--- a/inft1207w25sec11/week 6/ASS-3_part-3.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>St Huxley's Community College</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="ASS-3_part-3.css">
+    <link href="ASS-3_part-3.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
