--- a/inft1207w25sec11/week 6/ASS-3_part-3.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <!-- 
+    Name: joe jacob
+    Student Number: 100977645
+    File Name: ASS-3_part-2
+    Date: Feb-17-2025
+    Description: Make website for St Huxley's Community College
+    -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>St Huxley's Community College</title>
+    <!-- Link to external CSS file -->
     <link href="ASS-3_part-3.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
+  <!-- Header section containing the main title -->
   <header>
     <h1>St Huxley's Community College</h1>
   </header>
 
+  <!-- Main content section -->
   <section>
       <h2>Brave new world</h2>
 
+      <!-- Introduction paragraph with external links -->
       <p>It's a brave new world out there. Our children are being put in increasing more competitive situations, both during recreation, and as they start to move into the adult world of <a href="https://en.wikipedia.org/wiki/Examination">examinations</a>, <a href="https://en.wikipedia.org/wiki/Jobs">jobs</a>, <a href="https://en.wikipedia.org/wiki/Career">careers</a>, and other life choices. Having the wrong mindset, becoming <a href="https://en.wikipedia.org/wiki/Emotion">too emotional</a>, or making the wrong choices can contribute to them experiencing difficulty in taking their rightful place in today's ideal society.</p>
 
       <p>As concerned parents, guardians or carers, you will no doubt want to give your children the best possible start in life — and you've come to the right place.</p>
 
       <h2>The best start in life</h2>
 
+      <!-- Description of the college's educational approach -->
       <p>At St. Huxley's, we pride ourselves in not only giving our students a top quality education, but also giving them the societal and emotional intelligence they need to win big in the coming utopia. We not only excel at subjects such as genetics, data mining, and chemistry, but we also include compulsory lessons in:</p>
 
+      <!-- List of additional courses offered -->
       <ul>
         <li>Emotional control</li>
         <li>Judgement</li>
@@ -30,6 +43,7 @@
         <li>Focus and resolve</li>
       </ul>
 
+      <!-- Steps for parents to get more information -->
       <p>If you are interested, then you next steps will likely be to:</p>
       
       <ol>
@@ -39,6 +53,7 @@
       </ol>
   </section>
 
+  <!-- Sidebar section listing top courses -->
   <aside>
 
     <h2>Top course choices</h2>
@@ -60,6 +75,7 @@
 
   </aside>
 
+  <!-- Navigation menu for the website -->
   <nav>
 
     <ul>
@@ -73,6 +89,7 @@
 
   </nav>
 
+  <!-- Footer section with copyright info -->
   <footer>
 
     <p>&copy; 2016 St Huxley's Community College</p>
