--- a/inft1207w25sec11/week 6/ASS-3_part-4.html
+++ b/inft1207w25sec11/week 6/ASS-3_part-4.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <!-- 
+    Name: joe jacob
+    Student Number: 100977645
+    File Name: ASS-3_part-2
+    Date: Feb-17-2025
+    Description: Make website for Layout Task
+    -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Layout Task</title>
+    <!-- Link to external CSS file -->
     <link href="ASS-3_part-4.css" rel="stylesheet" type="text/css">
   </head>
 
 <body>
 
+  <!-- Logo section -->
   <div class="logo">
     My exciting website!
   </div>
 
+  <!-- Navigation menu -->
   <nav>
     <ul>
       <li>
@@ -39,6 +49,7 @@
         An Exciting Blog Post
       </h1>
       <img src="balloon-sq6.jpg" alt="placeholder" class="feature">
+      
       <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
         azuki bean garlic.</p>
 
@@ -60,10 +71,12 @@
 
     </article>
 
+    <!-- Sidebar section for photography -->
     <aside>
       <h2>
         Photography
       </h2>
+      <!-- List of photography images -->
       <ul class="photos">
         <li>
           <img src="balloon-sq1.jpg" alt="placeholder">
