--- a/inft1207w25sec11/week 9/ASS-4_part1.html
+++ b/inft1207w25sec11/week 9/ASS-4_part1.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-
+    <script src="./main.js"></script>
+    
     <title>Silly story generator</title>
 
     <style>
