--- a/inft1207w25sec11/ASS-4/part1/index.html
+++ b/inft1207w25sec11/ASS-4/part1/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <script src="./main.js"></script>
-    
+     <!-- 
+    Name: joe jacob
+    Student Number: 100977645
+    Date: april - 04- 2025
+    Description: This HTML document is designed to present a Enter custom name
+    -->
     <title>Silly story generator</title>
 
     <style>
@@ -51,5 +55,6 @@
     </div>
     <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
+    <script src="main.js"></script>
   </body>
 </html>
