--- a/inft1207w25sec11/ASS-4/part2/index.html
+++ b/inft1207w25sec11/ASS-4/part2/index.html
@@ -2,7 +2,12 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-
+     <!-- 
+    Name: joe jacob
+    Student Number: 100977645
+    Date: april - 04- 2025
+    Description: This HTML document is designed to present a Image gallery
+    -->
     <title>Image gallery</title>
 
     <link rel="stylesheet" href="style.css">
