--- a/inft1207w25sec11/ASS-4/part3/index.html
+++ b/inft1207w25sec11/ASS-4/part3/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <!-- 
+    Name: joe jacob
+    Student Number: 100977645
+    Date: april - 04- 2025
+    Description: This HTML document is designed to present a Bouncing balls
+    -->
     <title>Bouncing balls</title>
     <link rel="stylesheet" href="style.css">
   </head>
