--- a/inft1207w25sec11/ASS-5/index.html
+++ b/inft1207w25sec11/ASS-5/index.html
@@ -102,6 +102,9 @@
           <source src="media/bear.ogg" type="audio/ogg">
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
         </audio>
+        <div class="transcript">
+          <p>This isn't really an audio fact file about bears, but it is an audio file that you can transcribe.</p>
+        </div>
 
         <aside>
 
