--- a/inft1207w25sec11/ASS-5/index.html
+++ b/inft1207w25sec11/ASS-5/index.html
@@ -30,6 +30,9 @@
         <input type="search" name="q" placeholder="Search query">
         <input type="submit" value="Go!">
       </form>
+
+      <label for="search" class="visually-hidden">Search wildlife site</label>
+      
     </div>
 
     <main>
