--- a/inft1207w25sec11/ASS-5/index.html
+++ b/inft1207w25sec11/ASS-5/index.html
@@ -32,7 +32,7 @@
       </form>
 
       <label for="search" class="visually-hidden">Search wildlife site</label>
-      
+      <input type="search" name="q" id="search" placeholder="Search query">
     </div>
 
     <main>
