--- a/inft1207w25sec11/ASS-5/index.html
+++ b/inft1207w25sec11/ASS-5/index.html
@@ -54,6 +54,14 @@
           <caption>Bear facts and information</caption>
           <thead>
             <tr>
+              <th scope="col">Bear Type</th>
+              <th scope="col">Coat</th>
+              <!-- other headers -->
+            </tr>
+          </thead>
+           <!-- rest of table -->
+          <thead>
+            <tr>
               <td>Bear Type</td>
               <td>Coat</td>
               <td>Adult size</td>
