--- a/inft1207w25sec11/ASS-5/index.html
+++ b/inft1207w25sec11/ASS-5/index.html
@@ -126,13 +126,12 @@
 
             <form class="comment-form">
               <div class="flex-pair">
-                Your name:
                 <label for="name">Your name:</label>
-                <input type="text" name="name" id="name" placeholder="Enter your name">
+                <input type="text" name="name" id="name" placeholder="Enter your name" aria-label="Your name">
               </div>
               <div class="flex-pair">
-                Your comment:
-                <input type="text" name="comment" id="comment" placeholder="Enter your comment">
+                <label for="comment">Your comment:</label>
+                <input type="text" name="comment" id="comment" placeholder="Enter your comment" aria-label="Your comment">
               </div>
               <div>
                 <input type="submit" value="Submit comment">
