--- a/inft1207w25sec11/ASS-5/index.html
+++ b/inft1207w25sec11/ASS-5/index.html
@@ -99,10 +99,12 @@
         <br><br>
         The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.
         <br><br>
-        <audio controls>
+        <audio controls aria-label="Bear mating rituals audio">
           <source src="media/bear.mp3" type="audio/mp3">
           <source src="media/bear.ogg" type="audio/ogg">
-          <p>It looks like your browser doesn't support HTML5 audio players.</p>
+          <p>It looks like your browser doesn't support HTML5 audio players. 
+            <a href="media/bear.mp3">Download the audio file</a> instead.
+          </p>
         </audio>
         <div class="transcript">
           <p>This isn't really an audio fact file about bears, but it is an audio file that you can transcribe.</p>
