--- a/inft1207w25sec11/ASS-5/index.html
+++ b/inft1207w25sec11/ASS-5/index.html
@@ -36,7 +36,7 @@
 
     <main>
       <article>
-        <font size="6">The trouble with Bears</font>
+        <h2>The trouble with Bears</h2>
         <br><br>
         By Evan Wild
         <br><br>
