--- a/inft1207w25sec11/ASS-5/index.html
+++ b/inft1207w25sec11/ASS-5/index.html
@@ -44,7 +44,7 @@
         <br><br>
         So what are bears really like, and why does the world's media portray them with such a skewed vision? In this article we try to answer those questions, and give you a real insight into the life of the bear.
         <br><br>
-        <font size="5">Types of bear</font>
+        <h3>Types of bear</h3>
         <br><br>
         Bears come in two varieties — large and medium. You don't get small bears. If you have seen a small bear, then it was in fact probably a baby bear (cub) from another species.
         <br><br>
