--- a/inft1207w25sec11/ASS-5/index.html
+++ b/inft1207w25sec11/ASS-5/index.html
@@ -82,7 +82,7 @@
   </tbody>
 </table>
 
-        <font size="5">Habitats and Eating habits</font>
+      <h3>Habitats and Eating habits</h3>
         <br><br>
         Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.
         <br><br>
