--- a/inft1207w25sec11/ASS-5/index.html
+++ b/inft1207w25sec11/ASS-5/index.html
@@ -114,7 +114,7 @@
 
         <aside>
 
-          <font size="5">About the author</font>
+          <h2>About the author</h2>
         <br><br>
           Evan Wild is an unemployed plumber from Doncaster, who has been really "in to" wildlife since childhood. He once went to Chester Zoo on holiday, but got ill after eating a doner kebab.
         <br><br>
